Update to version 3.2 of Jawr
git-svn-id: https://svn.java.net/svn/jawr~svn/branches/3.x_development@505 4db09855-0bbe-6bc9-8408-d5225a1fabd9